--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
@@ -14,43 +14,42 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelpingHands"
-        tools:targetApi="31">
+        tools:targetApi="31" >
 
-<!--        Main Screens-->
+         <!-- Main Screens -->
         <activity
             android:name=".screens.LaunchActivity"
-            android:exported="true">
-<!--            <intent-filter>-->
-<!--                <action android:name="android.intent.action.MAIN" />-->
+            android:exported="true" >
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
-<!--                <category android:name="android.intent.category.LAUNCHER" />-->
-<!--            </intent-filter>-->
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
         <activity
             android:name=".screens.RegistrationActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".LoginPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".HomePageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".CampaignJoiningOptionsPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".CampaignPostingOptionsPageActivity"
-            android:exported="true">
-        </activity>
+            android:exported="true" />
 
 
-<!--        Donation Campaign-->
+        <!-- Donation Campaign -->
         <activity
             android:name=".screens.DonationCampaign.DonationOptionPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignPostingPageActivity"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -59,43 +58,46 @@
         </activity>
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignSummaryPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignStatusPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
+
+        <activity
+            android:name=".screens.DonationCampaign.DonationCampaignStatusJoinPageActivity"
+            android:exported="true" >
+
+        </activity>
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.DonationCampaign.TransactionPageActivity"
-            android:exported="true"></activity>
-
-<!--        Unspecialized Activity -->
+            android:exported="true" /> <!-- Unspecialized Activity -->
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivityPostingPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivitySummaryPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivityStatusPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivitySelectionPageActivity"
-            android:exported="true"></activity>
-
-<!--        Volunteer Activity-->
+            android:exported="true" /> <!-- Volunteer Activity -->
         <activity
             android:name=".screens.VolunteerCampaign.VolunteerCampaignPostingPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.VolunteerCampaign.VolunteerCampaignSummaryPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.VolunteerCampaign.VolunteerCampaignStatusPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
         <activity
             android:name=".screens.VolunteerCampaign.VolunteerCampaignSelectionPageActivity"
-            android:exported="true"></activity>
+            android:exported="true" />
     </application>
+
 </manifest>
