--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -54,7 +54,11 @@
         </activity>
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignSummaryPageActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
+
+
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignStatusPageActivity"
             android:exported="true">
@@ -67,6 +71,10 @@
             android:name=".screens.DonationCampaign.DonationCampaignStatusJoinPageActivity"
             android:exported="true" >
 
+        </activity>
+        <activity
+            android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -74,9 +82,6 @@
             </intent-filter>
 
         </activity>
-        <activity
-            android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
-            android:exported="true" />
         <activity
             android:name=".screens.DonationCampaign.TransactionPageActivity"
             android:exported="true" /> <!-- Unspecialized Activity -->
