--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -51,7 +51,11 @@
             android:name=".screens.DonationCampaign.DonationCampaignPostingPageActivity"
             android:exported="true" >
 
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
 
 
         </activity>
@@ -71,11 +75,6 @@
             android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
             android:exported="true">
 
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
         </activity>
         <activity
             android:name=".screens.DonationCampaign.TransactionPageActivity"
@@ -84,10 +83,14 @@
       <!-- Unspecialized Activity -->
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivityPostingPageActivity"
-            android:exported="true" />
+            android:exported="true">
+
+        </activity>
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivitySummaryPageActivity"
             android:exported="true" />
+
+
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivityStatusPageActivity"
             android:exported="true" />
