--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,15 +28,17 @@
         </activity>
         <activity
             android:name=".RegistrationActivity"
-            android:exported="true" />
-        <activity
-            android:name=".LoginPageActivity"
-            android:exported="true" >
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name=".LoginPageActivity"
+            android:exported="true" >
+
         </activity>
 
         <activity
