--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -24,6 +24,7 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
         <activity
             android:name=".RegistrationActivity"
@@ -38,6 +39,11 @@
 
         <activity
             android:name=".HomePageActivity"
+            android:exported="true">
+
+        </activity>
+        <activity
+            android:name=".ProfilePageActivity"
             android:exported="true">
         </activity>
         <activity
