--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ plugins {
 
 android {
     namespace 'com.intprog.helpinghands'
-    compileSdk 33
+    compileSdk 34
 
     defaultConfig {
         applicationId "com.intprog.helpinghands"
@@ -56,4 +56,7 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:33.0.0')
     implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.gms:google-services:4.3.10'
+
+    implementation 'com.stripe:stripe-android:20.44.0'
+    implementation 'com.android.volley:volley:1.2.1'
 }
