--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -72,7 +72,8 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
             -->
-        </activity> <!-- Donation Campaign -->
+        </activity>
+        <!-- Donation Campaign -->
         <activity
             android:name=".screens.DonationCampaign.DonationOptionPageActivity"
             android:exported="true" />
@@ -89,8 +90,9 @@
             android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
             android:exported="true"></activity>
         <activity
-            android:name=".screens.DonationCampaign.TransactionPageActivity"
-            android:exported="true" /> <!-- Unspecialized Activity -->
+            android:name=".screens.PaymentPageActivity"
+            android:exported="true" />
+        <!-- Unspecialized Activity -->
         <activity
             android:name=".screens.UnspecializedActivity.UnspecializedActivityPostingPageActivity"
             android:exported="true"></activity>
