--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,15 +48,17 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.8'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation 'com.google.android.material:material:1.9.0'
+    implementation 'com.google.firebase:firebase-database:21.0.0'
+
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.3'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.4.0'
 
     implementation platform('com.google.firebase:firebase-bom:33.0.0')
-    implementation 'com.google.firebase:firebase-analytics'
     implementation 'com.google.gms:google-services:4.3.10'
 
     implementation 'com.stripe:stripe-android:20.44.0'
     implementation 'com.android.volley:volley:1.2.1'
 }
+apply plugin: 'com.google.gms.google-services'
