--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,24 +6,17 @@
     <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 
     <application
+        android:name=".MyApplication"
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
         android:fullBackupContent="@xml/backup_rules"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@mipmap/helpinghands_icon"
         android:label="@string/app_name"
-        android:roundIcon="@mipmap/ic_launcher_round"
+        android:roundIcon="@mipmap/helpinghands_icon_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.HelpingHands"
         tools:targetApi="31">
-        <activity
-            android:name=".screens.PaymentPageActivity"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
         <!-- Main Screens -->
         <activity
             android:name=".LaunchActivity"
@@ -101,7 +94,6 @@
         <activity
             android:name=".screens.DonationCampaign.DonationCampaignSelectionPageActivity"
             android:exported="true" />
-            android:exported="true"></activity>
         <activity
             android:name=".screens.PaymentPageActivity"
             android:exported="true" />
