--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.9.0'
     implementation 'com.google.firebase:firebase-database:21.0.0'
     implementation 'com.google.firebase:firebase-auth-ktx:23.0.0'
+    implementation 'com.github.bumptech.glide:glide:4.16.0'
 
 
     testImplementation 'junit:junit:4.13.2'
